--- a/Project/frontend-react/package.json
+++ b/Project/frontend-react/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
